# appins

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  test_build.py
appins/: main.py  prompt_template.txt
tests/: conftest.py  test_appins.py
