[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=test_build.py"
# mock_use_standalone_module = true

[build-system]
# Minimum requirements for the build system to execute.
requires = ["flit_core >=3.2,<4"]
# identifies the entry point to the build backend object, using the dotted path as a string.
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "appins"

[tool.flit.sdist]
exclude = ["tests/"]

# project’s core metadata
[project]
name = "appins"
authors = [
    { name = "0xsirsaif", email = "sirsaif99@gmail.com" }
]
description = "appins - cli tool for enabledu ecosystem"
readme = "README.md"
# This clearly delineates which metadata is purposefully unspecified and expected to stay unspecified
# compared to being provided via tooling later on.
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Session",
]
requires-python = ">=3.7"
dependencies = [
    "typer >= 0.7.0",
    "cookiecutter >= 2.1.1",
]

[project.scripts]
appins = "appins.main:app"

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "requests",
    "isort",
    "pytest-asyncio",
    "flake8-docstrings",
    "black",
    "mypy",
    "codecov",
    "pytest-cov",
    "pytest-mock",
    "asynctest",
    "flit",
    "bumpversion",
]

[project.urls]
Documentation = "https://github/0xsirsaif/appins"

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    # "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]